manifest/rancher/gateway_rancher.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-redirect-http
  namespace: cattle-system
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-system
      sectionName: http
  hostnames:
    - rancher.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-https
  namespace: cattle-system
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-system
      sectionName: https
  hostnames:
    - rancher.example.com
  rules:
    - backendRefs:
      - name: rancher
        port: 80
